[gd_scene load_steps=2 format=3 uid="uid://bqic6ky7yxt0h"]

[ext_resource type="Script" path="res://scenes/scripts/modulation_matrix.gd" id="1_tbenb"]

[node name="ModulationMatrix" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tbenb")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Source"

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Destination"

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Parameter"

[node name="Label4" type="Label" parent="VBoxContainer2/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Amount
"

[node name="ModEntryVBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="AddConnectionButton" type="Button" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Add connection"

[node name="ApplyConnectionsButton" type="Button" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Apply"

[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/AddConnectionButton" to="." method="_on_add_connection_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/ApplyConnectionsButton" to="." method="_on_apply_connections_button_pressed"]
